# FastAPI-Docker-Poetry

./: README.md  docker-compose.yml  pyproject.toml
backend/: .env  main.py
backend/api/app/routers/: default.py
backend/api/core/: config.py
